fix(frontend/controller): prevent shrinkage of bars on mobile controller

--- a/app/frontend/src/Controller/index.css
+++ b/app/frontend/src/Controller/index.css
@@ -45,6 +45,7 @@
   background-color: var(--controller-bar-background-color);
   transition: 0.3s all;
   flex-wrap: wrap;
+  flex-shrink: 0;
   justify-content: center;
 }
 
